[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/volume_slider.gd" id="1"]

[node name="VolumeSlider" type="Control"]
custom_minimum_size = Vector2(300, 48)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Volume"
vertical_alignment = 1

[node name="Slider" type="HSlider" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 100.0
value = 100.0

[node name="ValueLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MuteButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ðŸ”Š"
flat = true
